<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo1"
    tools:context=".U3.U3C2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:textColor="#FFFF"
                android:textStyle="bold"
                android:text="Conversation 2: Attending a fair part 2"
                android:textSize="30dp" />

            //1
            <LinearLayout
                android:background="@drawable/shape"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="45dp"
                    android:layout_height="46dp"
                    android:layout_gravity="left"
                    app:srcCompat="@drawable/man" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/unou3c21" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn_repoUC21"
                            android:layout_width="35dp"
                            android:layout_height="36dp"
                            android:background="@drawable/volume"
                            android:backgroundTint="@color/blue" />

                        <Button
                            android:id="@+id/btn_recUC21"
                            android:layout_width="35dp"
                            android:layout_height="36dp"
                            android:background="@drawable/stop_rec"
                            android:backgroundTint="@color/blue"
                            android:onClick="RecorderUC21" />



                        <Button
                            android:id="@+id/btn_playUC21"
                            android:layout_width="35dp"
                            android:layout_height="37dp"
                            android:background="@drawable/reproducir"
                            android:backgroundTint="@color/blue"
                            android:onClick="reproducirUC21" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            //2
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:padding="20dp"
                android:background="@drawable/shape">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/ddosu3c12" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn_repoUC22"
                            android:layout_width="35dp"
                            android:layout_height="36dp"
                            android:backgroundTint="@color/blue"
                            android:background="@drawable/volume" />

                        <Button
                            android:id="@+id/btn_recUC22"
                            android:layout_width="35dp"
                            android:layout_height="36dp"
                            android:background="@drawable/stop_rec"
                            android:backgroundTint="@color/blue"
                            android:onClick="RecorderUC22" />

                        <Button
                            android:id="@+id/btn_playUC12"
                            android:layout_width="36dp"
                            android:layout_height="37dp"
                            android:background="@drawable/reproducir"
                            android:backgroundTint="@color/blue"
                            android:onClick="reproducirUC22" />
                    </LinearLayout>

                </LinearLayout>
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="45dp"
                    android:layout_height="46dp"
                    app:srcCompat="@drawable/woman" />


            </LinearLayout>
            //3
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:padding="20dp"
                android:background="@drawable/shape">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    app:srcCompat="@drawable/man" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/tresu3c23"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn_repoUC23"
                            android:layout_width="35dp"
                            android:backgroundTint="@color/blue"
                            android:layout_height="36dp"
                            android:background="@drawable/volume" />
                        <Button
                            android:id="@+id/btn_recUC23"
                            android:layout_width="35dp"
                            android:layout_height="36dp"
                            android:background="@drawable/stop_rec"
                            android:backgroundTint="@color/blue"
                            android:onClick="RecorderUC23" />

                        <Button
                            android:id="@+id/btn_playUC23"
                            android:layout_width="36dp"
                            android:layout_height="37dp"
                            android:background="@drawable/reproducir"
                            android:backgroundTint="@color/blue"
                            android:onClick="reproducirUC23" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            //4
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:padding="20dp"
                android:background="@drawable/shape">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/cuatro3c24" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                       android:layout_gravity="right"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn_repoUC24"
                            android:layout_width="35dp"
                            android:backgroundTint="@color/blue"
                            android:layout_height="36dp"
                            android:background="@drawable/volume" />
                        <Button
                            android:id="@+id/btn_recUC24"
                            android:layout_width="35dp"
                            android:layout_height="36dp"
                            android:background="@drawable/stop_rec"
                            android:backgroundTint="@color/blue"
                            android:onClick="RecorderUC24" />

                        <Button
                            android:id="@+id/btn_playUC24"
                            android:layout_width="36dp"
                            android:layout_height="37dp"
                            android:background="@drawable/reproducir"
                            android:backgroundTint="@color/blue"
                            android:onClick="reproducirUC24" />






                    </LinearLayout>

                </LinearLayout>



                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="45dp"
                    android:layout_height="46dp"
                    app:srcCompat="@drawable/woman" />
            </LinearLayout>
            //5
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:padding="20dp"
                android:background="@drawable/shape">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="45dp"
                    android:layout_height="46dp"
                    app:srcCompat="@drawable/man" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/cinco3c25" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn_repoUC25"
                            android:layout_width="35dp"
                            android:backgroundTint="@color/blue"
                            android:layout_height="36dp"
                            android:background="@drawable/volume" />
                        <Button
                            android:id="@+id/btn_recUC25"
                            android:layout_width="35dp"
                            android:layout_height="36dp"
                            android:background="@drawable/stop_rec"
                            android:backgroundTint="@color/blue"
                            android:onClick="RecorderUC25" />

                        <Button
                            android:id="@+id/btn_playUC25"
                            android:layout_width="36dp"
                            android:layout_height="37dp"
                            android:background="@drawable/reproducir"
                            android:backgroundTint="@color/blue"
                            android:onClick="reproducirUC25" />




                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
            //6
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:padding="20dp"
                android:background="@drawable/shape">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                       android:layout_gravity="right"
                        android:padding="8dp"
                        android:text="@string/seis3c26" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="right">
                        <Button
                            android:id="@+id/btn_repoUC26"
                            android:layout_width="35dp"
                            android:layout_height="36dp"
                            android:backgroundTint="@color/blue"
                            android:background="@drawable/volume" />
                        <Button
                            android:id="@+id/btn_recUC26"
                            android:layout_width="35dp"
                            android:layout_height="36dp"
                            android:background="@drawable/stop_rec"
                            android:backgroundTint="@color/blue"
                            android:onClick="RecorderUC26" />

                        <Button
                            android:id="@+id/btn_playUC26"
                            android:layout_width="36dp"
                            android:layout_height="37dp"
                            android:background="@drawable/reproducir"
                            android:backgroundTint="@color/blue"
                            android:onClick="reproducirUC26" />


                    </LinearLayout>
                </LinearLayout>


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="45dp"
                    android:layout_height="46dp"
                    app:srcCompat="@drawable/woman" />
            </LinearLayout>


            //next
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/before"
                    android:backgroundTint="#FFFF"
                    android:textSize="50dp"
                    />

                <Button
                    android:id="@+id/home"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/home"
                    android:backgroundTint="#FFFF" />

                <Button
                    android:id="@+id/nextconver1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/next"
                    android:backgroundTint="#FFFF"
                    android:textSize="50dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>